# FinanceFlow

./: .gitignore  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci_pipeline.yml
src/: config.py
src/core/application/transaction/dto/: category.py  currency.py  operation.py  transaction.py
src/core/application/transaction/factories/: category.py  currency.py  operation.py  transaction.py
src/core/application/user/dto/: role.py  user.py
src/core/application/user/exceptions/: invalid_credentials.py
src/core/application/user/factories/: user.py
src/core/application/user/use_cases/: get_user.py  login.py  register.py
src/core/domain/transaction/entities/: category.py  currency.py  operation.py  transaction.py
src/core/domain/transaction/enums/: operation.py
src/core/domain/transaction/exceptions/: __init__.py
src/core/domain/transaction/filters/: transaction.py
src/core/domain/transaction/repositories/: category.py  currency.py  operation.py  transaction.py
src/core/domain/transaction/value_objects/: amount_range.py  data_range.py  money.py
src/core/infrastructure/database/: __init__.py  core.py
src/core/infrastructure/repositories/: category.py  currency.py  operation.py  role.py  transaction.py  user.py
src/core/infrastructure/services/: cryptography.py
src/core/shared/: exceptions.py  utils.py
src/presentation/app/: app.py
src/presentation/app/api/: category.py  currency.py  operation.py  transaction.py
src/presentation/app/templates/: 404.html  base.html  footer.html  header.html  home.html  statistics.html  transactions.html
src/presentation/app/utils/: permissions.py  tools.py
(+94 files in other folders)
