[tool.poetry]
name = "financeflowbackend"
version = "0.1.0"
description = ""
authors = ["Roman505050 <myhun59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
bcrypt = "^4.2.0"
email-validator = "^2.2.0"
flask = {extras = ["async"], version = "^3.0.3"}
flask-wtf = "^1.2.2"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
loguru = "^0.7.2"
flasgger = "^0.9.7.1"
asgiref = "^3.8.1"
hypercorn = "^0.17.3"


[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_after_imports = 2
line_length = 79
skip = [
    "src/core/infrastructure/database/migrations/versions",
    ".venv",
    "venv"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
